--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class="box-container">
 
         <div class="box">
-            <span class="price"> $5 - $20 </span>
+            <span class="price"> Rs-200 - Rs-500 </span>
             <img src="images/p-1.jpg" alt="">
             <h3>tasty burger</h3>
             <div class="stars">
@@ -138,7 +138,7 @@
             <a href="#" class="btn">order now</a>
         </div>
         <div class="box">
-            <span class="price"> $5 - $20 </span>
+            <span class="price"> Rs-200 - Rs-500 </span>
             <img src="images/p-2.jpg" alt="">
             <h3>tasty cakes</h3>
             <div class="stars">
@@ -151,7 +151,7 @@
             <a href="#" class="btn">order now</a>
         </div>
         <div class="box">
-            <span class="price"> $5 - $20 </span>
+            <span class="price"> Rs-200 - Rs-500 </span>
             <img src="images/p-3.jpg" alt="">
             <h3>tasty sweets</h3>
             <div class="stars">
@@ -164,7 +164,7 @@
             <a href="#" class="btn">order now</a>
         </div>
         <div class="box">
-            <span class="price"> $5 - $20 </span>
+            <span class="price"> Rs-200 - Rs-500 </span>
             <img src="images/p-4.jpg" alt="">
             <h3>tasty cupcakes</h3>
             <div class="stars">
@@ -177,7 +177,7 @@
             <a href="#" class="btn">order now</a>
         </div>
         <div class="box">
-            <span class="price"> $5 - $20 </span>
+            <span class="price"> Rs-200 - Rs-500 </span>
             <img src="images/p-5.jpg" alt="">
             <h3>cold drinks</h3>
             <div class="stars">
@@ -190,7 +190,7 @@
             <a href="#" class="btn">order now</a>
         </div>
         <div class="box">
-            <span class="price"> $5 - $20 </span>
+            <span class="price"> Rs-200 - Rs-500 </span>
             <img src="images/p-6.jpg" alt="">
             <h3>cold ice-cream</h3>
             <div class="stars">
@@ -419,15 +419,15 @@
 <section class="footer">
 
     <div class="share">
-        <a href="https://www.facebook.com/freewebsitecode/" class="btn">facebook</a>
-        <a href="https://www.freewebsitecode.com/" class="btn">twitter</a>
-        <a href="https://www.freewebsitecode.com/" class="btn">instagram</a>
-        <a href="https://www.freewebsitecode.com/" class="btn">pinterest</a>
-        <a href="https://www.freewebsitecode.com/" class="btn">linkedin</a>
-        <a href="https://www.youtube.com/channel/UC9HlQRmKgG3jeVD_fBxj1Pw/videos" class="btn">youtube</a>
+        <a href="#" class="btn">facebook</a>
+        <a href="#" class="btn">twitter</a>
+        <a href="#" class="btn">instagram</a>
+        <a href="#" class="btn">pinterest</a>
+        <a href="#" class="btn">linkedin</a>
+        
     </div>
 
-    <h1 class="credit"> created by <span> <a href="https://www.freewebsitecode.com/">Free Website Code</a> </span> | all rights reserved! </h1>
+    
 
 </section>
 
